--- a/examples/Makefile
+++ b/examples/Makefile
@@ -6,13 +6,13 @@ CFLAGS=-std=c99 $(FLAGS)
 CXXFLAGS=-std=c++11 $(FLAGS)
 
 
-EXAMPLES=ex1 ex2 ex3 ex4 ex5
+EXAMPLES=ex1 ex2 ex3 ex4 ex5 ex6
 
 %: %.c
-	$(CC) $(CFLAGS) $< -o $@
+	$(CC) $(CFLAGS) $< -o $@ -lm
 
 %: %.cpp
-	$(CXX) $(CXXFLAGS) $< -o $@
+	$(CXX) $(CXXFLAGS) $< -o $@ -lm
 
 all: $(EXAMPLES)
 
